objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>vlocity_cmt__Billing</fullName>
        <description>There is a complaint about billing. This has to do with money.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Service Problem</fullName>
        <description>There is something wrong with the service. This does not include Billing issues.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account / Service / Proj Mgrs / BE Inquiries</fullName>
                </value>
                <value>
                    <fullName>Add WiFi Calling</fullName>
                </value>
                <value>
                    <fullName>Add/Modify Travel / Roaming Pack</fullName>
                </value>
                <value>
                    <fullName>BAU Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>BC Government HUP/Activations BC ONLY</fullName>
                </value>
                <value>
                    <fullName>Billing Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Block Outgoing Long Distance</fullName>
                </value>
                <value>
                    <fullName>Block Roaming Outside Rogers</fullName>
                </value>
                <value>
                    <fullName>Business Self Serve Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Cancellation Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Change Subscriber Name</fullName>
                </value>
                <value>
                    <fullName>Contract Inquiry</fullName>
                </value>
                <value>
                    <fullName>Coverage Inquiries</fullName>
                </value>
                <value>
                    <fullName>Dealer Inquiries</fullName>
                </value>
                <value>
                    <fullName>Dept Code Change</fullName>
                </value>
                <value>
                    <fullName>General Inquiries</fullName>
                </value>
                <value>
                    <fullName>Hardware Inquiries</fullName>
                </value>
                <value>
                    <fullName>HUP Eligibility Check</fullName>
                </value>
                <value>
                    <fullName>IMEI Inquiries or Update</fullName>
                </value>
                <value>
                    <fullName>M2M Billing Questions / Concerns</fullName>
                </value>
                <value>
                    <fullName>M2M General Account Maintenance - Add plans/blocks</fullName>
                </value>
                <value>
                    <fullName>M2M Reports - Jasper/V21/Customer/Internal</fullName>
                </value>
                <value>
                    <fullName>M2M Sim/Hardware Orders</fullName>
                </value>
                <value>
                    <fullName>Pager Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Payment MOP Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Payment Request</fullName>
                </value>
                <value>
                    <fullName>Phone Contact Email Response</fullName>
                </value>
                <value>
                    <fullName>Port Request ESD Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Price Plan/Feature Inquiry/Update</fullName>
                </value>
                <value>
                    <fullName>Process Activations in V21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <label>DisputeId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dispute_ID__c</fullName>
        <label>Dispute ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the service Asset which is the subject of this Case.</description>
        <label>Service ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__BillingAccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__ServiceAccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Line Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__StatementLineItem__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription which is the subject of this Case.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AB1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AB1</label>
        <queue>AB1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AB2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AB2</label>
        <queue>AB2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AlbertaBSG1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AlbertaBSG1</label>
        <queue>AlbertaBSG1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AlbertaBSG2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AlbertaBSG2</label>
        <queue>AlbertaBSG2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Default_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Default Queue</label>
        <queue>Default_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MYBSG10_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MYBSG10</label>
        <queue>MYBSG10</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MYBSG11_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MYBSG11</label>
        <queue>MYBSG11</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MYBSG2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MYBSG2</label>
        <queue>MYBSG2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MYBSG_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MYBSG</label>
        <queue>MYBSG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Oracle_Requests_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Oracle Requests</label>
        <queue>Oracle_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Overflow_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Overflow Queue</label>
        <queue>Overflow_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBSG12_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>RBSG12</label>
        <queue>RBSG12</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Billing</businessProcess>
        <description>Billing complaint.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Service Problem</businessProcess>
        <description>There is something wrong with the service provided or a product associated with that service.</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>